force-app/main/default/objects/Equipment_List__c/Equipment_List__c.object-meta.xml
<CustomObject>
    <label>Equipment List</label>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>