force-app/main/default/objects/Equipment_List__c/fields/Beginning_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Inventory__c</fullName>
    <label>Beginning Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>