force-app/main/default/objects/Equipment_List__c/fields/Count_Available__c.field-meta.xml
<CustomField>
    <fullName>Count_Available__c</fullName>
    <formula>Ending_Inventory__c -  Net_Reserve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ending Inventory  -  Net Reserve</inlineHelpText>
    <label>Open to Reserve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>