force-app/main/default/objects/Equipment_List__c/fields/Count_of_Casss__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Casss__c</fullName>
    <label>Count of Cassettes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>