force-app/main/default/objects/Equipment_List__c/fields/Count_Reserved_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Count_Reserved_Outstanding__c</fullName>
    <formula>Count_Needed__c -  Count_Reserved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count Needed - Count Reserved</inlineHelpText>
    <label>Count Needed Not Yet Reserved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>