force-app/main/default/objects/Equipment_List__c/fields/Ending_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Ending_Inventory__c</fullName>
    <formula>Beginning_Inventory__c -  Count_Shipped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Beginning Inventory - Count Shipped</inlineHelpText>
    <label>Ending Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>