force-app/main/default/objects/Equipment_List__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>InTransit</fullName>
            </value>
            <value>
                <fullName>OffPremise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>